--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>WhatsApp "Read More" Generator</h1>
+    <h1>WhatsApp "Read More" Generator by Phoenix </h1>
 
     <!-- Tabs -->
     <div class="tabs">
